@@ -256,5 +256,6 @@ Lars Duening thanks:
      Tomas (Vandergnome@aol.com)
      Tomi Valkeinen (tomi.valkeinen@taikatech.com, Tomba@Batmud)
      Tucita@UNItopia
+     Urv (urv@hispeed.ch)
      Wolf Dieter Dallinger (Pulami@Unitopia, wolf.dieter@dallinger.de)
      Zonk@FinalFrontier (zonk@finalfrontier.mud.de, rueschi@berit-broese.de)
