@@ -58,12 +58,15 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 449)
-(Parent-Version lpmud 3-3 448)
-(Version-Log "Corrected a crasher in the PCRE string replacement code.")
+(Project-Version lpmud 3-3 450)
+(Parent-Version lpmud 3-3 449)
+(Version-Log "Only consecutive 'z'/'Z' commands in the ed do not reprint the current line.
+Destructing an interactive object when using pthreads now properly flushes all
+remaining data to the socket.
+Small corrections to the pthreads code.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 29 Apr 2003 00:20:42 -0600")
+(Checkin-Time "Wed, 30 Apr 2003 13:17:47 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -99,8 +102,8 @@
   ;; Information about the driver and the distribution in general
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
-  (CREDITS (lpmud/d/22_CREDITS 1.70.1.64 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.512 644))
+  (CREDITS (lpmud/d/22_CREDITS 1.70.1.65 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.513 644))
   (HISTORY (lpmud/f/49_HISTORY 1.321 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -168,13 +171,13 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.15 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.53 644))
-  (src/comm.h (lpmud/d/3_comm.h 1.26.1.32 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.54 644))
+  (src/comm.h (lpmud/d/3_comm.h 1.26.1.33 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
-  (src/ed.c (lpmud/c/33_ed.c 1.32.1.29 644))
+  (src/ed.c (lpmud/c/33_ed.c 1.32.1.30 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.3 644))
   (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.74 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
@@ -191,7 +194,7 @@
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.36 644))
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.29 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.4 644))
-  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.54 644))
+  (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.55 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
   (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.43 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
