@@ -303,6 +303,7 @@ mdb_log_sbrk (p_int size)
 #    warning "-----------------------------------"
 #    warning ""
 #endif
+
 /*-------------------------------------------------------------------------*/
 size_t
 xalloced_size (POINTER p
